--- a/assets/package.json
+++ b/assets/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@tailwindcss/forms": "^0.3.2",
+    "alpinejs": "^2.8.2",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^5.1.1",
